added type qualifier to ID
pushed the use of ID much much farther

changed API for finding resources in the catalog

git-svn-id: http://svn.refractions.net/udig/udig/trunk@31328 e5c1c795-43da-0310-a71f-fac65c449510